Update image and rebase s6 to v3

--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -8,5 +8,5 @@ full_custom_readme: |
   [appurl]: https://cloud-images.ubuntu.com
   [dockerfileurl]: https://github.com/timstephens24/docker-baseimage-ubuntu/blob/master/Dockerfile
 
-  A custom base image built with [Ubuntu cloud image][appurl] and [S6 overlay](https://github.com/just-containers/s6-overlay)..
+  A custom base image built with [Ubuntu cloud image][appurl] and [S6 overlay](https://github.com/just-containers/s6-overlay). Slightly modified from the folks over at Linuxserver.
   {%- endraw %}
